k8s/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atoloan-api-ingress
  namespace: atoloan-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: dev.atoloan.api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atoloan-api
            port:
              number: 80
